--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -12,16 +12,16 @@
         <div class="container justify-content-center w-50 p-3" style="margin-top: 5em;">
             <div class="alert alert-success fill-parent">
                 <h1 class="display-5" th:if="${param.success}" id="success">Success</h1>
-                <span>Your changes were successfully saved. Click <a th:action="@{/home}">here</a> to continue.</span>
+                <span>Your changes were successfully saved. Click <a th:href="@{/home}">here</a> to continue.</span>
             </div>
             <div  th:if="${param.error}"> class="alert alert-danger fill-parent">
                 <h1 class="display-5">Error</h1>
-                <span>Your changes were not saved. Click <a th:action="@{/home}">here</a> to continue.</span>
+                <span>Your changes were not saved. Click <a th:href="@{/home}">here</a> to continue.</span>
             </div>
             <div th:if="${param.error}" class="alert alert-danger fill-parent">
                 <h1 class="display-5">Error</h1>
                 <span>Changes Not Saved</span>
-                <span>Click <a>here</a> to continue.</span>
+                <span>Click <a th:href="@{/home}">here</a> to continue.</span>
             </div>
         </div>
     </body>
