--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -61,7 +61,7 @@
                         </div>
                     </div>
                     <div class="tab-pane fade" id="nav-notes" role="tabpanel" aria-labelledby="nav-notes-tab">
-                        <button style="margin: 0.25em;" type="button" class="btn btn-info float-right" onclick="showNoteModal()">
+                        <button style="margin: 0.25em;" type="button" id="add-note-btn" class="btn btn-info float-right" onclick="showNoteModal()">
                             + Add a New Note
                         </button>
 
@@ -83,8 +83,9 @@
                                                     th:data-parameter2="${note.getNoteTitle()}"
                                                     th:data-parameter3="${note.getNoteDescription()}"
                                                     th:onclick="showNoteModal(this.getAttribute('data-parameter1'), this.getAttribute('data-parameter2'), this.getAttribute('data-parameter3'))"
+                                                    id="edit-note-btn"
                                             >Edit</button>
-                                            <a class="btn btn-danger" th:href="@{notes/delete/__${note.getNoteId()}__}">Delete</a>
+                                            <a class="btn btn-danger" th:href="@{notes/delete/__${note.getNoteId()}__}" id="delete-note-btn">Delete</a>
                                         </td>
                                         <th scope="row" th:text="${note.noteTitle}">Example Note Title</th>
                                         <td th:text="${note.noteDescription}">Example Note Description </td>
@@ -118,14 +119,14 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                        <button type="button" class="btn btn-primary" onclick="$('#noteSubmit').click();">Save changes</button>
+                                        <button type="button" class="btn btn-primary" onclick="$('#noteSubmit').click();" id="save-note-btn">Save changes</button>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="tab-pane fade" id="nav-credentials" role="tabpanel" aria-labelledby="nav-credentials-tab">
-                        <button style="margin: 0.25em;" type="button" class="btn btn-info float-right" onclick="showCredentialModal()">
+                        <button style="margin: 0.25em;" type="button" id="add-cred-btn" class="btn btn-info float-right" onclick="showCredentialModal()">
                             + Add a New Credential
                         </button>
 
@@ -150,6 +151,7 @@
                                                 th:data-parameter3="${cred.getUsername()}"
                                                 th:data-parameter4="${cred.getPassword()}"
                                                 th:onclick="showCredentialModal(this.getAttribute('data-parameter1'), this.getAttribute('data-parameter2'), this.getAttribute('data-parameter3'), this.getAttribute('data-parameter4'))"
+                                                id="edit-credential-btn"
                                         >Edit</button>
                                         <a th:href="@{credentials/__${cred.getCredentialId()}__}" class="btn btn-danger">Delete</a>
                                     </td>
@@ -189,8 +191,8 @@
                                         </form>
                                     </div>
                                     <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                        <button type="button" class="btn btn-primary" onclick="$('#credentialSubmit').click();">Save changes</button>
+                                        <button type="button" class="btn btn-secondary" id="close-cred-btn" data-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-primary" id="cred-save-btn" onclick="$('#credentialSubmit').click();">Save changes</button>
                                     </div>
                                 </div>
                             </div>
