--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -30,7 +30,7 @@
             </form>
 
             <div class="form-group" style="margin-top: 0.5em;">
-                <label><a th:href="@{/signup}">Click here to sign up</a></label>
+                <label><a  id="signup-page" th:href="@{/signup}">Click here to sign up</a></label>
             </div>
         </div>
     </body>
