--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,6 +15,9 @@
                 <div class="alert alert-danger" th:if="${param.error}">
                     Invalid username or password
                 </div>
+                <div class="alert alert-danger" th:if="${param.success}">
+                    Successfully registered
+                </div>
                 <div class="alert alert-dark" th:if="${param.logout}" >
                     You have been logged out
                 </div>
